--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "^7.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-spring": "^7.2.4",
     "reactstrap": "^6.5.0"
   },
   "devDependencies": {
